Added CSS to improve menu item alignment.

--- a/data/gantry5/themes/g5_hydrogen/config/default/layout.yaml
+++ b/data/gantry5/themes/g5_hydrogen/config/default/layout.yaml
@@ -53,6 +53,7 @@ content:
   edit_view_page_in_git-4956:
     title: 'Edit/View Page in Git'
     block:
+      class: git-edit
       variations: align-right
   position-breadcrumbs:
     attributes:
