Preparing for release.

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -8,6 +8,6 @@ author:
  url: http://hibbittsdesign.org
 homepage: https://github.com/hibbitts-design/grav-skeleton-oer-content-space
 demo: http://demo.hibbittsdesign.org/grav-oer-content-space/
-keywords: gantry, theme, responsive, oer, open
+keywords: gantry, theme, responsive, oer, open, git, sync
 bugs: https://github.com/hibbitts-design/grav-skeleton-oer-content-space/issues
 license: MIT
