--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,6 +1,6 @@
 name: OER Content Space Site
 version: 0.9.2
-description: "OER Content Space skeleton package with Gantry 5, designed to share and collaboratively edit Open Educational Resources using seamless Git (e.g. GitHub/Lab) syncing."
+description: "OER Content Space skeleton package with Gantry 5, designed to share and collaboratively edit Markdown-based Open Educational Resources using seamless Git (e.g. GitHub, GitLab, etc.) syncing."
 icon: university
 author:
  name: Paul Hibbitts
