Updated default menu order.

--- a/data/gantry5/themes/g5_helium/config/menu/mainmenu.yaml
+++ b/data/gantry5/themes/g5_helium/config/menu/mainmenu.yaml
@@ -4,7 +4,7 @@ ordering:
   home: ''
   basic-page: ''
   blog-page: ''
-  modular-sample: ''
+  modular-page: ''
   layouts:
     full-width: ''
     right-sidebar: ''
@@ -20,7 +20,7 @@ items:
   blog-page:
     enabled: true
     anchor_class: ''
-  modular-sample:
+  modular-page:
     enabled: true
     anchor_class: ''
   layouts:
