--- a/data/gantry5/themes/g5_helium/config/oer_right_sidebar/index.yaml
+++ b/data/gantry5/themes/g5_helium/config/oer_right_sidebar/index.yaml
@@ -1,5 +1,5 @@
-name: right_sidebar
-timestamp: 1486170058
+name: oer_right_sidebar
+timestamp: 1486338568
 version: 7
 preset:
   image: 'gantry-admin://images/layouts/default.png'
@@ -22,6 +22,8 @@ sections:
   footer: Footer
   offcanvas: Offcanvas
 particles:
+  custom:
+    custom-5193: 'Custom HTML'
   logo:
     logo-4658: 'Logo / Image'
     logo-2374: 'Logo / Image'
@@ -35,8 +37,6 @@ particles:
     system-content-9459: 'Page Content'
   edit_view_page_in_git:
     edit_view_page_in_git-7339: 'Edit/View Page in Git'
-  custom:
-    custom-5193: 'Custom HTML'
   cc_license:
     cc_license-7452: 'CC License'
   horizontalmenu:
@@ -48,9 +48,6 @@ particles:
 inherit:
   default:
     navigation: navigation
-    logo-4658: logo-9608
-    menu-1912: menu-6409
-    social-3380: social-3171
     header: header
     intro: intro
     features: features
@@ -59,14 +56,17 @@ inherit:
     testimonials: testimonials
     expanded: expanded
     aside: aside
-    position-position-7969: position-position-4734
     mainbar: mainbar
+    footer: footer
+    offcanvas: offcanvas
+    logo-4658: logo-9608
+    menu-1912: menu-6409
+    social-3380: social-3171
+    position-position-7969: position-position-4734
     system-content-9459: system-content-1587
     edit_view_page_in_git-7339: edit_view_page_in_git-6755
-    footer: footer
     logo-2374: logo-9571
     cc_license-7452: cc_license-6440
     horizontalmenu-2152: horizontalmenu-9034
     totop-4034: totop-8670
-    offcanvas: offcanvas
     mobile-menu-1132: mobile-menu-5697
