--- a/data/gantry5/themes/g5_hydrogen/config/oer_left_sidebar/index.yaml
+++ b/data/gantry5/themes/g5_hydrogen/config/oer_left_sidebar/index.yaml
@@ -1,13 +1,13 @@
-name: left_sidebar
-timestamp: 1486167165
+name: oer_left_sidebar
+timestamp: 1486338527
 version: 7
 preset:
   image: 'gantry-admin://images/layouts/default.png'
   name: default
   timestamp: 1485645719
 positions:
-  header: Header
   breadcrumbs: Breadcrumbs
+  header: Header
   footer: Footer
 sections:
   header: Header
@@ -17,22 +17,22 @@ sections:
   footer: Footer
   offcanvas: Offcanvas
 particles:
-  logo:
-    logo-4027: Logo
-  position:
-    position-position-5158: Header
-    position-position-9637: Breadcrumbs
-    position-position-4228: Footer
-  menu:
-    menu-8048: Menu
-  edit_view_page_in_git:
-    edit_view_page_in_git-3554: 'Edit/View Page in Git'
   custom:
     custom-3366: 'Custom HTML'
+  position:
+    position-position-9637: Breadcrumbs
+    position-position-5158: Header
+    position-position-4228: Footer
   messages:
     system-messages-6459: 'System Messages'
   content:
     system-content-3570: 'Page Content'
+  logo:
+    logo-4027: Logo
+  menu:
+    menu-8048: Menu
+  edit_view_page_in_git:
+    edit_view_page_in_git-3554: 'Edit/View Page in Git'
   cc_license:
     cc_license-7537: 'CC License'
   spacer:
@@ -44,15 +44,15 @@ particles:
 inherit:
   default:
     header: header
+    navigation: navigation
+    footer: footer
+    offcanvas: offcanvas
     logo-4027: logo-2843
     position-position-5158: position-header
-    navigation: navigation
     menu-8048: menu-9182
     edit_view_page_in_git-3554: edit_view_page_in_git-4460
-    footer: footer
     position-position-4228: position-footer
     cc_license-7537: cc_license-8818
     spacer-2473: spacer-8764
     branding-5074: branding-2958
-    offcanvas: offcanvas
     mobile-menu-1572: mobile-menu-7745
