--- a/config/system.yaml
+++ b/config/system.yaml
@@ -79,6 +79,7 @@ cache:
     method: file
   driver: auto
   prefix: g
+  cli_compatibility: false
   lifetime: 604800
   gzip: false
   allow_webserver_gzip: false
