--- a/data/gantry5/themes/g5_hydrogen/config/default/page/body.yaml
+++ b/data/gantry5/themes/g5_hydrogen/config/default/page/body.yaml
@@ -1,7 +1,9 @@
 attribs:
   id: ''
   class: gantry
-  extra: {  }
+  extra:
+    -
+      prefix: 'oer: http://oerschema.org/'
 layout:
   sections: '0'
 body_top: ''
