--- a/data/gantry5/themes/g5_hydrogen/config/default/page/head.yaml
+++ b/data/gantry5/themes/g5_hydrogen/config/default/page/head.yaml
@@ -2,23 +2,11 @@ meta: {  }
 head_bottom: ''
 atoms:
   -
-    id: oer_schema-6389
+    id: oer_schema-6446
     type: oer_schema
     title: 'OER Schema'
     attributes:
-      oer_scheme_type: none
-      oer_scheme_id: ''
-      oer_scheme_name: ''
-      enabled: 1
-  -
-    id: assets-1991
-    type: assets
-    title: 'Custom CSS / JS'
-    attributes:
-      enabled: '1'
-      css:
-        - { location: '', inline: ".git-edit .g-content {\n    margin: 0.26rem;\n}", extra: {  }, priority: '0', name: 'Edit in Git Menu' }
-        - { location: '', inline: ".radio {\n    display: list-item;\n}", extra: {  }, priority: '0', name: 'Stack Form Radios' }
-        - { location: '', inline: ".checkboxes {\n    display: list-item;\n}", extra: {  }, priority: '0', name: 'Stack Form Checkboxes' }
-        - { location: '', inline: "#g-sidebar, #g-aside {\n    padding: 0;\n}", extra: {  }, priority: '0', name: 'Sidebar Vertical Adjustment' }
-      javascript: {  }
+      enabled: '0'
+      oer_scheme_type: Topic
+      oer_scheme_id: '#OEROVERVIEW'
+      oer_scheme_name: 'OER Overview'
